--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 * {
   padding: 0; margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+.limitar-secao {
+  max-width: 1024px;
+  margin: 0 auto;
 }
