--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,9 @@
 * {
-  padding: 0; margin: 0;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: 'Dancing Script', cursive;
+  font-family: 'Poppins', sans-serif;
 }
 
 html {
