--- a/src/components/Categorias/Categorias.module.css
+++ b/src/components/Categorias/Categorias.module.css
@@ -13,7 +13,7 @@
     justify-content: center;
     gap: 10px;
 
-    background-color: white;
+    background-color: #f3f3f3;
 
     padding: 10px 0px;
     border-radius: 0.35rem;
