--- a/src/components/CampoDeBusca/CampoDeBusca.module.css
+++ b/src/components/CampoDeBusca/CampoDeBusca.module.css
@@ -1,21 +1,21 @@
 .barra_busca {
-    position: relative;
     display: flex;
     align-items: center;
+    position: relative;
     padding: 5px;
 }
 
 .barra_busca img {
-    width: 20px;
-    height: 20px;
     position: absolute;
     left: 14px;
+    width: 20px;
+    height: 20px;
 }
 
 .barra_busca input {
-    padding: 10px;
     width: 100%;
-    border: 1px solid grey;
+    padding: 10px;
+    border: 1px solid rgb(162, 162, 162);
     border-radius: 50px;
 }
 
