--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,7 +4,6 @@
     background-size: fill;
     background-position: center;
     height: 60vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,6 +20,7 @@
     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
     color: #FFF;
     font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
 }
 
 .banner_titulo p {
@@ -28,7 +28,6 @@
     font-family: 'Dancing Script', cursive;
     color: #daa520;
 }
-
 
 .container_elementos_de_busca {
     padding: 50px 20px 0 20px;
@@ -38,8 +37,8 @@
     padding: 0 20px 50px 20px;
 }
 
-.container_cardapio > h3 {
-text-align: center;
+.container_cardapio>h3 {
+    text-align: center;
     color: #daa520;
     font-family: 'Dancing Script', cursive;
     font-size: 30px;
@@ -51,4 +50,31 @@ text-align: center;
     flex-flow: wrap row;
     gap: 40px;
     background-color: #f3f3f3;
+}
+
+@media (max-width:768px) {
+    .banner_titulo {
+        width: 70%;
+    }
+}
+
+@media (max-width:375px) {
+    .banner {
+        background-size: cover;
+        height: 30vh
+    }
+
+    .banner_titulo {
+        width: 68%;
+    }
+
+    .banner_titulo h1 {
+        font-size: 30px;
+    }
+
+    .banner_titulo p {
+        font-size: 20px;
+        font-family: 'Dancing Script', cursive;
+        color: #daa520;
+    }
 }
